apps/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: media
spec:
  selector:
    app: homarr
  ports:
  - port: 80
    targetPort: 7575
